# maca

./: .gitignore  AUTHORS  Makefile.am  README  TODO.org  configure.ac
src/: Makefile.am  maca.cc  main.cc  parseKripke.cc  parseKripke.hh
src/ctlparse/: Makefile.am  ctl-lexer.ll  ctl-public.hh  ctl.yy
src/io/: Makefile.am  ctl-lexer.ll  ctl.yy  kripke-lexer.ll
src/kripkeparse/: Makefile.am  driver.cc  driver.hh  kripke-lexer.ll  kripke.yy
src/verification/: verification.cc  verification.hh
tests/: Makefile.am  big.test  cl3serv3.kripke  defs.in  kripke.kr  medium.test  parse-ctl.cc  parse-ctl.test  parse-kripke.cc  parse-kripke.test  simple.test
